# garak

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CA_DCO.md  CONTRIBUTING.md  FAQ.md  LICENSE  MANIFEST.in  README.md  evals.csv  garak.py  gpt35-0906.avid.jsonl  persuader.py  pylintrc  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_suggestion.md  plugin_suggestion.md  question.md
.github/workflows/: cla.yml  labels.yml  lint.yml  maintain_cache.yml  remote_package_install.yml  test_linux.yml  test_macos.yml  test_windows.yml  tests.yml
analyse/: analyse_log.py
analyse/templates/: digest_detector.jinja  digest_module.jinja
analyze/: count_tokens.py  report_avid.py  report_digest.py
analyze/templates/: digest_detector.jinja  digest_footer.jinja  digest_header.jinja  digest_module.jinja  digest_probe.jinja
detectors/: base.py  dan.py  lmrc.py  toxicity.py
docs/: requirements-docs.txt
docs/source/: Makefile  _config.rst  _plugins.rst  api.rst  attempt.rst  basic.rst  buffs.rst  cli.rst  cliref.rst  command.rst  conf.py  configurable.rst  contributing.generator.rst  contributing.probe.rst  contributing.rst  detectors.rst  evaluators.rst  exception.rst  garak.buffs.base.rst  garak.buffs.encoding.rst  garak.buffs.low_resource_languages.rst  garak.buffs.lowercase.rst  garak.buffs.paraphrase.rst  garak.buffs.rst  garak.detectors.ansiescape.rst  garak.detectors.any.rst  garak.detectors.base.rst  garak.detectors.continuation.rst  garak.detectors.dan.rst  garak.detectors.divergence.rst  garak.detectors.encoding.rst  garak.detectors.fileformats.rst  garak.detectors.goodside.rst  garak.detectors.judge.rst  garak.detectors.keywords.rst  garak.detectors.knownbadsignatures.rst  garak.detectors.leakreplay.rst  garak.detectors.lmrc.rst  garak.detectors.malwaregen.rst  garak.detectors.misleading.rst  (+91 more)
evaluators/: base.py  maxrecall.py
garak/: __init__.py  __main__.py  _config.py  _plugins.py  attempt.py  cli.py  command.py  configurable.py  exception.py  failure.py  garak.py  garak.site.yaml  interactive  interactive.py  payloads.py  policy.py  report.py  test.py  translator.py
garak/analyze/: __init__.py  aggregate_reports.py  analyze_log.py  calibration.py  count_tokens.py  get_tree.py  hitlog2tsv.py  misp.py  perf_stats.py  prompt_response_eval.py  report_avid.py  report_digest.py  report_top_level_stats_tsv.py
garak/buffs/: __init__.py  art.py  base.py  encoding.py  low_resource_languages.py  lowercase.py  paraphrase.py
garak/configs/: broad.yaml  cutoff.yaml  fast.yaml  full.yaml  long_attack_gen.yaml  notox.yaml  tox_and_buffs.yaml
garak/data/: __init__.py  banners  book_cloze_80.tsv  graph_connectivity.json  misp_descriptions.tsv  nyt_cloze.tsv  ofcom-potentially-offensive.txt  potter_cloze.tsv  profanity_en.csv  truefalse_falseclaims_50.txt  typology_payloads.tsv
garak/detectors/: always.py  ansiescape.py  any.py  base.py  continuation.py  dan.py  dan_ar.py  encoding.py  fileformats.py  gest.py  goodside.py  hashencoding.py  judge.py  keywords.py  knownbadsignatures.py  leakreplay.py  lmrc.py  malwaregen.py  misinfo.py  misleading.py  mitigation.py  mitigation_ar.py  packagehallucination.py  perspective.py  productkey.py  promptinject.py  refuse_to_answer.py  replay.py  riskywords.py  snowball.py  specialwords.py  toxicity.py  visual_jailbreak.py  xss.py
garak/evaluators/: base.py  maxrecall.py
garak/generators/: __init__.py  azure.py  base.py  blank.py  cohere.py  cohere_chat.py  function.py  ggml.py  groq.py  guardrails.py  huggingface.py  langchain.py  langchain_serve.py  litellm.py  llava.py  multi_endpoint_rest.py  nemo.py  nim.py  nvcf.py  octo.py  ollama.py  oobabooga.py  openai.py  openai_v0.py  rasa.py  replicate.py  rest.py  test.py  websocket.py
garak/harness/: base.py  probewise.py  pxd.py
garak/harnesses/: base.py  detectoronly.py  probewise.py  pxd.py
garak/probes/: ag.py  ansiescape.py  art.py  artprompt.py  atkgen.py  av_spam_scanning.py  base.py  blank.py  continuation.py  custom.py  dan.py  dan_ar.py  divergence.py  donotanswer.py  donotanswer_ar.py  encoding.py  fileformats.py  gcg.py  gest.py  glitch.py  goodside.py  grandma.py  hashencoding.py  knownbadsignatures.py  latentinjection.py  leakreplay.py  lmrc.py  malwaregen.py  misinfo.py  misleading.py  packagehallucination.py  past_tense.py  phrasing.py  prompt.py  promptinject.py  realtoxicityprompts.py  replay.py  sandwich.py  sci_safe_eval.py  snowball.py  (+7 more)
garak/resources/: book_cloze.tsv  common.py  garak.core.yaml  guardian_cloze.tsv  inthewild_jailbreak_llms.txt  misinfo.jsonl  misp_descriptions.tsv  nyt_cloze.tsv  plugin_cache.json  rtp_insult.txt  rtp_profanity.txt  rtp_severe_toxicity.txt  rtp_sexually_explicit.txt  rtp_threat.txt  safebench_filenames.txt  safebenchtiny_filenames.txt  slurprompts.jsonl  slurprompts_80.jsonl  slursreclaimedslurs.txt  termscrape.py
generators/: huggingface.py
harness/: base.py
modules/: persuadermodule.py
persuader/: persuadermodule.py
persuadermodules/: realtoxicityprompts.py
probes/: base.py  blank.py  dan.py  lmrc.py  realtoxicityprompts.py
resources/: primality_testing.json  rtp_flirtation.txt  rtp_identity_attack.txt  rtp_profanity.txt  rtp_sexually_explicit.txt  senator_search.json  slurprompts_50.jsonl  slurprompts_80.jsonl  truefalse_falseclaims.txt
resources/promptinject/: __init__.py  prompting.py  scoring.py
signatures/: cla.json
src/garak/: garak.py
tests/: conftest.py  test_analyze.py  test_attempt.py  test_cli.py  test_config.py  test_configurable.py  test_data.py  test_docs.py  test_hitlog.py  test_internal_structures.py  test_payloads.py  test_plugins.py  test_policy.py  test_probes_format.py  test_reqs.py  test_translator.py
tests/analyze/: test_analyze.py  test_calibration.py
tests/buffs/: test_buff_config.py  test_buffs.py  test_buffs_paraphrase.py
tests/cli/: test_cli.py
tests/generators/: conftest.py  (+17 more)
tools/: termscrape.py
utils/: termscrape.py
(+169 files in other folders)
