[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garak"
version = "0.9.0.12.post1"
authors = [
  { name = "Leon Derczynski", email="lderczynski@nvidia.com" },
  { name = "Subho Majumdar", email="subho@vijil.ai" },
  { name = "nv052193" },
  { name = "Mads Kongsbak" },
  { name = "Erick Galinkin", email="egalinkin@nvidia.com" },
  { name = "Tianhao Li" },
  { name = "Phyllis Poh" },
  { name = "Razvan Dinu" },
  { name = "Zander Mackie" },
  { name = "Greg Stephens"},
]
license = { file = "LICENSE" }
description = "LLM vulnerability scanner"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = [
  "base2048>=0.1.3",
  "transformers>=4.19",
  "datasets>=2.14.6,<2.17",
  "colorama>=0.4.3",
  "tqdm>=4.64.0",
  "cohere>=4.5.1,<5",
  "openai==1.12.0",
  "replicate>=0.8.3",
  "google-api-python-client>=2.0",
  "backoff>=2.1.1",
  "rapidfuzz>=3.0.0",
  "jinja2>=3.1.2",
  "nltk>=3.8.1",
  "accelerate>=0.23.0",
  "avidtools==0.1.1.2",
  "stdlibs>=2022.10.9",
  "langchain>=0.0.300",
  "nemollm>=0.3.0",
  "octoai-sdk>=0.8.0",
  "cmd2==2.4.3",
  "torch>=2.1.0",
  "sentencepiece>=0.1.99",
  "markdown>=3.4.3",
  "numpy>=1.26.1",
  "zalgolib>=0.2.2",
  "ecoji>=0.1.0",
  "deepl==1.17.0",
  "fschat>=0.2.36",
  "litellm>=1.33.8",
  "typing>=3.7,<3.8; python_version<'3.5'",
]

[project.optional-dependencies]
tests = [
  "pytest>=8.0",
  "requests-mock==1.12.1",
]
lint = [
  "black>=22.3",
]

[project.urls]
"Homepage" = "https://github.com/leondz/garak"
"Bug Tracker" = "https://github.com/leondz/garak/issues"

[project.scripts]
garak = "garak.__main__:main"

[tool.setuptools]
packages = ["garak"]

[tool.setuptools.package-data]
"garak.resources" = ["*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "default:::garak",
]
